--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "html-webpack-plugin": "^2.28.0",
+    "mysql": "^2.17.1",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -60,6 +61,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^3.6.0",
     "sass-loader": "^6.0.3",
+    "sqlite3": "^4.0.9",
     "standard": "^10.0.2",
     "style-loader": "^0.23.1",
     "webpack": "^2.5.1",
