--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9",
     "html-webpack-plugin": "^2.28.0",
+    "js-cookies": "^1.0.4",
     "mysql": "^2.17.1",
     "node-sass": "^4.5.2",
     "react": "^15.5.4",
