--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sqlite3": "^4.0.9",
     "standard": "^10.0.2",
     "style-loader": "^0.23.1",
+    "url-parse": "^1.4.7",
     "webpack": "^2.5.1",
     "webpack-stream": "^3.2.0"
   },
